# hobj

./: .gitignore  Makefile  README.md  license.md  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: ci.yml
examples/: dev.py  documentation.ipynb  loading_raw_data_and_metadata.ipynb  score_example_model.py  score_example_models.ipynb  score_model.ipynb  view_behavioral_data.ipynb  view_behavioral_data.py  view_experiment1_behavior.ipynb  view_experiment2_behavior.ipynb  view_experiment2_behavioral_data.ipynb  view_oneshot_behavioral_data.py
hobj/: __init__.py  config.py  schema.py  types.py
hobj/behavioral_data/: human_data.py
hobj/benchmarks/: __init__.py  benchmarks.py  common.py  learning_curve_benchmark.py  make_model.py  mut_highvar_benchmark.py  mut_oneshot_benchmark.py
hobj/benchmarks/benchmark_utils/: data_resampling.py
hobj/benchmarks/binary_classification/: benchmark.py  estimate.py  estimator.py  scoring.py  simulation.py  task.py
hobj/benchmarks/experiment_simulation/: environment.py  experiment_simulation.py  experiment_simulation2_tmp.py  task.py
hobj/benchmarks/generalization/: benchmark.py  estimate.py  estimator.py  mut_oneshot_benchmark.py  simulator.py  task.py
hobj/benchmarks/leedicarlo_benchmarks/: mut_highvar_benchmark.py
hobj/benchmarks/todo/: mut_oneshot_benchmark.py
hobj/data/: behavior.py  download.py  images.py  schema.py  store.py
hobj/data/behavior/: highvar_behavior.py  human_data.py  oneshot_behavior.py  template.py
hobj/data_loaders/: behavior.py  download.py  images.py  store.py
hobj/images/: __init__.py  highvar.py  imagesets.py  load_image.py  oneshot.py  probe.py  readme.md  template.py
hobj/learning_models/: __init__.py  create_model.py  learning_model.py  make_model.py  random_guesser.py  representation.py  update_rules.py
hobj/loaders/: behavior.py
hobj/statistics/: __init__.py  lapse_rate.py
hobj/stats/: __init__.py  binomial.py  ci.py
hobj/stats_new/: __init__.py  ci.py  learning_curve.py
hobj/utils/: file_io.py  hash.py  stats.py
scripts/: package-archive.py
site/: changelist.md
site/readme_images/: run_make_images.py
tests/: test_data_loader_cache.py  test_dummy_learner.py  test_load_behavior.py  test_load_benchmarks.py  test_simulate_subtask.py  test_statistics_builders.py  test_statistics_dataset_usage.py
(+53 files in other folders)
