[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "hobj"
version = "2.0.0"
description = "Human object learning benchmarks"
authors = [
    { name = "Michael J. Lee", email = "mil@mit.edu" }
]
license = "MIT"
license-files = ["license.md"]
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "numpy>=2.2",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "requests>=2.32",
    "tqdm>=4.67",
    "pydantic>=2.10",
    "xarray>=2025.1",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[project.urls]
repository = "https://github.com/himjl/hobj"

[tool.uv.build-backend]
module-root = ""

